--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2017 kennytm
+#
+# SPDX-License-Identifier: Apache-2.0 OR MIT
+
 max_width = 120
 use_small_heuristics = "Max"
 use_field_init_shorthand = true
