chore: Update `Cargo.toml`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,41 +11,31 @@
 
 [package]
 name = "qrcode"
-description = "QR code encoder in Rust"
-license = "MIT OR Apache-2.0"
 version = "0.14.1"
 edition = "2024"
 rust-version = "1.85.0"
-authors = ["kennytm <kennytm@gmail.com>"]
-keywords = ["qrcode"]
-categories = ["encoding", "multimedia::images"]
-repository = "https://github.com/kennytm/qrcode-rust"
-readme = "README.md"
-documentation = "http://docs.rs/qrcode"
-exclude = [
-    ".travis.yml", ".gitignore", "test-data/**"
-]
+description = "QR code encoder in Rust"
+documentation = "https://docs.rs/qrcode"
+repository = "https://github.com/sorairolake/qrcode-rust2"
+license = "Apache-2.0 OR MIT"
+keywords = ["qrcode", "rmqr"]
+categories = ["encoding", "multimedia::images", "no-std"]
+include = ["/LICENSES", "/README.md", "/src"]
 
-[badges]
-maintenance = { status = "passively-maintained" }
+[package.metadata.docs.rs]
+all-features = true
 
-[dependencies]
-image = { version = "0.25", default-features = false, optional = true }
-
-[dev-dependencies]
-image = "0.25"
-
-[features]
-default = ["std", "image", "svg", "pic", "eps"]
-image = ["dep:image", "std"]
-std = []
-svg = []
-pic = []
-eps = []
+[[example]]
+name = "encode_eps"
+required-features = ["eps"]
 
 [[example]]
 name = "encode_image"
 required-features = ["image"]
+
+[[example]]
+name = "encode_pic"
+required-features = ["pic"]
 
 [[example]]
 name = "encode_string"
@@ -55,9 +45,28 @@ name = "encode_svg"
 required-features = ["svg"]
 
 [[example]]
-name = "encode_pic"
-required-features = ["pic"]
+name = "encode_unicode"
 
-[[example]]
-name = "encode_eps"
-required-features = ["eps"]
+[dependencies]
+image = { version = "0.25.8", default-features = false, optional = true }
+
+[dev-dependencies]
+image = "0.25.8"
+
+[features]
+default = ["eps", "image", "pic", "std", "svg"]
+eps = []
+image = ["dep:image", "std"]
+pic = []
+std = []
+svg = []
+
+[lints.clippy]
+cargo = "warn"
+nursery = "warn"
+pedantic = "warn"
+
+[lints.rust]
+missing_debug_implementations = "deny"
+rust_2018_idioms = { level = "warn", priority = -1 }
+unsafe_code = "forbid"
