--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,7 +1,10 @@
 # SPDX-FileCopyrightText: 2017 kennytm
+# SPDX-FileCopyrightText: 2025 Shun Sakai
 #
 # SPDX-License-Identifier: Apache-2.0 OR MIT
 
-max_width = 120
-use_small_heuristics = "Max"
-use_field_init_shorthand = true
+format_code_in_doc_comments = true
+format_macro_matchers = true
+group_imports = "StdExternalCrate"
+imports_granularity = "Crate"
+wrap_comments = true
