--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ image = { version = "0.25.8", default-features = false, optional = true }
 
 [dev-dependencies]
 image = "0.25.8"
+tempfile = "3.23.0"
 
 [features]
 default = ["eps", "image", "pic", "std", "svg"]
